--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphology-hits",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "HITS algorithm for graphology.",
   "main": "index.js",
   "files": [
@@ -39,6 +39,7 @@
     "extends": "@yomguithereal/eslint-config"
   },
   "dependencies": {
+    "graphology-utils": "^1.0.0",
     "lodash.defaultsdeep": "^4.6.0"
   }
 }
