--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphology-hits",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "HITS algorithm for graphology.",
   "main": "index.js",
   "files": [
@@ -40,6 +40,6 @@
   },
   "dependencies": {
     "graphology-utils": "^1.0.0",
-    "lodash.defaultsdeep": "^4.6.0"
+    "lodash": "^4.16.3"
   }
 }
