--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphology-hits",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "HITS algorithm for graphology.",
   "main": "index.js",
   "files": [
@@ -32,7 +32,7 @@
     "@yomguithereal/eslint-config": "^3.0.0",
     "chai": "^3.5.0",
     "eslint": "^3.5.0",
-    "graphology": "0.1.0",
+    "graphology": "^0.5.4",
     "mocha": "^3.0.2"
   },
   "eslintConfig": {
